# axum-base

./: .ai-context.md  .aider.conf.yml  .claude.md  .continuerc.json  .copilotignore  .cursorrules  .dockerignore  .env  .env.example  .gemini.md  .jetbrains-ai.md  .warp.md  .windsurf.md  AI-ROBOT-FRIENDS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  compose.yml  tw-build.sh  tw.sh
.cargo/: config.toml
.sqlx/: query-1e38e5b7a6ce026f79113f031e0a47ac808286f93e9b3879243ab7fd219567ba.json  query-30aa8003262b82ee58f1819f1a74c195768dce6d4c8d297e8b7eab1d990f61c5.json  query-368e08292bdb2f59184d85871ebbfb853361519708f5d4b906942d9bb748f970.json  query-4d002a4780a3f30651c24d398875eb378ff6ba153d7cdc268ffc0b56c5b04f1e.json  query-5c948122c3a1469040cf14571318ec26a5ff98d08011d3db5d6e41377a810b41.json  query-728cf7be1cc45b7a68ff3ba5d31b4afc8775f3d2d187131a473a0bb1b270b2b6.json  query-796687600b707e5d6d6b1ed8470c70e6a27bc5b01c98f39263dc72075642b1d2.json  query-8b6ac14c0ee96ff4c92867de92ef2f13f2964f3119c90f1c0deeaeffca4e98d1.json  query-9b62369ff1116288b8abdb1280433b0e2ed32ad4fc6b49c4bd0e16787bc23d96.json  query-c9ede4343fe46d6364cc06b37b923a2476f22584f02dacec1fc17c09068097f3.json  query-d6bd9fa3d0060228e5f4bb1b2dc7b10593ab0a844f7ce6740e6e4b798cba0b0c.json
migrations/: 0001_create_initial_schema.sql  0002_seed_categories.sql  0003_seed_sample_items.sql
src/: api.rs  auth.rs  context.rs  database.rs  lib.rs  main.rs  models.rs  routes.rs  server.rs  services.rs  web.rs
static/: style.css
templates/: base.html  index.html  landing.html  login.html  profile.html
tests/: api_tests.rs  cli_tests.rs
tests/common/: mod.rs
