[package]
name = "axum-base"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "axum-base"
path = "src/main.rs"

[[bin]]
name = "create_user"
path = "src/bin/create_user.rs"

[[bin]]
name = "set_password"
path = "src/bin/set_password.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
tera = "1.19"
local-ip-address = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
# Authentication dependencies
argon2 = "0.5"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }
axum-extra = { version = "0.10", features = ["form"] }

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
hyper = "1.0"
tower = { version = "0.5", features = ["util"] }
axum-test = "18.0"
serde_json = "1.0"
# HTTP client for integration tests
reqwest = { version = "0.12", features = ["json"] }
